Java 15 -> 16 (#391)
* Update errorprone

* Remove Lombok

* Fix Kotlin Sample for JDK 16

* Fix Datastore CGLIB usage on JDK 16

* Add --illegal-access=permit to open up internal JDK modules

Co-authored-by: Mike Eltsufin <meltsufin@google.com>